--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-22">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk-21/lib/jrt-fs.jar"/>
+	<classpathentry kind="lib" path="C:/OneNote Notebooks/Imp Jars/Selenium Jars/selenium-java-4.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/OneNote Notebooks/Imp Jars/Selenium Jars/testng-7.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/OneNote Notebooks/Imp Jars/Selenium Jars/webdrivermanager-5.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/OneNote Notebooks/Imp Jars/webdrivermanager-5.8.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
